--- a/src/investment-app-frontend/src/styles/index.scss
+++ b/src/investment-app-frontend/src/styles/index.scss
@@ -38,3 +38,8 @@ textarea {
 }
 
 @import url('./reset.scss');
+@import url('./loader.scss');
+@import url('./button.scss');
+@import url('./modal.scss');
+@import url('./fallback-page.scss');
+@import url('./form-field.scss');
