Add the CheckAccess component, fix dependencies

--- a/src/investment-app-frontend/src/styles/index.scss
+++ b/src/investment-app-frontend/src/styles/index.scss
@@ -40,6 +40,10 @@ textarea {
 @import url('./reset.scss');
 @import url('./loader.scss');
 @import url('./button.scss');
+@import url('./login.scss');
 @import url('./modal.scss');
 @import url('./fallback-page.scss');
+@import url('./default-page-layout.scss');
+@import url('./logout-button.scss');
 @import url('./form-field.scss');
+@import url('./set-userdata.scss');
