Implement the DepositManagement component

--- a/src/investment-app-frontend/src/styles/index.scss
+++ b/src/investment-app-frontend/src/styles/index.scss
@@ -47,3 +47,4 @@ textarea {
 @import url('./logout-button.scss');
 @import url('./form-field.scss');
 @import url('./set-userdata.scss');
+@import url('./deposit.scss');
